--- a/playground/src/styles/global.css
+++ b/playground/src/styles/global.css
@@ -1,4 +1,20 @@
+@font-face {
+  font-family: Emoji;
+  src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"), local("Noto Color Emoji");
+  unicode-range: U+1F000-1F644, U+203C-3299;
+}
+
 :root {
+  width: 100%;
+  height: 100%;
+  font-family: Avenir, system-ui, -apple-system, "Segoe UI", Roboto, Emoji, Helvetica, Arial, sans-serif;
+  font-synthesis: none;
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-size-adjust: 100%;
+  background-color: hsl(var(--background));
+
   --background: 0 0% 100%;
   --foreground: 0 0% 3.9%;
   --card: 0 0% 100%;
@@ -21,6 +37,11 @@
   --input: 0 0% 89.8%;
   --ring: 0 0% 3.9%;
   --radius: 0.75rem;
+}
+
+html.dark {
+  color-scheme: dark;
+  background-color: hsl(var(--background));
 }
 
 .dark {
