--- a/playground/src/styles/global.css
+++ b/playground/src/styles/global.css
@@ -13,6 +13,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
+  scrollbar-gutter: stable both-edges;
   background-color: hsl(var(--background));
 
   --background: 0 0% 100%;
